| Summary: | ASTERISK-20544: action_originate called via ast_hook_send_action causes a segfault | ||||
| Reporter: | Kinsey Moore (kmoore) | Labels: | |||
| Date Opened: | 2012-10-10 08:11:17 | Date Closed: | 2012-10-10 08:37:27 | ||
| Priority: | Blocker | Regression? | |||
| Status: | Closed/Complete | Components: | Core/ManagerInterface | ||
| Versions: | 11.0.0-beta2 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Any call to ast_hook_send_action that results in an Originate AMI action. | Attachments: | |||
| Description: | The session member of mansession struct is dereferenced without checking that it is non-NULL in action_originate in manager.c. | ||||
| Comments: | |||||